welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:14: error: value -- is not a member of Int
		i--
                 ^