welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() 
{
	var i = 0
	while(!estSurBiscuit())
	{
		avance()
		i = i + 1
	}
	prendBiscuit()
	while(i != 0)
	{
		recule()
		i--
	}
	poseBiscuit()
}

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
